# MRN_with_AI

./: .gitignore  README.md  requirements.txt
src/image_classification/: CMakeLists.txt  package.xml
src/image_classification/config/: params.yaml
src/image_classification/launch/: classify_image.launch
src/image_classification/scripts/: generate_dataset.py  image_classification.py  res_net.py  test_script.py
src/image_classification/src/: image_classification.py  res_net.py  test_script.py
src/lstm_trajectory_prediction/: CMakeLists.txt  compare.py  inference.py  model.py  model_seq50_100epochs.pth  model_seq50_ES46.pth  package.xml  requirements.txt  training_log_seq50_100epochs.xlsx
src/lstm_trajectory_prediction/launch/: predict_trajectory.launch
src/lstm_trajectory_prediction/models/: model_seq30.pth
src/lstm_trajectory_prediction/scripts/: extract_imu_data_2.py  inference.py  model.py
src/my_turtlebot3_openai_example/config/: my_turtlebot3_openai_deepqlearn_params.yaml  my_turtlebot3_openai_deepqlearn_params_3.yaml  my_turtlebot3_openai_qlearn_params_v2.yaml
src/my_turtlebot3_openai_example/launch/: all_inference.launch  start_training_v3.launch
src/my_turtlebot3_openai_example/rewards/: T14_episode_data.txt
src/my_turtlebot3_openai_example/scripts/: inference.py  start_deepqlearning v2.py  start_deepqlearning.py  (+2 more)
src/openai_ros/: .gitignore  requirements.txt
src/turtlebot3_waypoints1/: CMakeLists.txt  package.xml
src/turtlebot3_waypoints1/launch/: turtlebot3_waypoints1.launch
src/turtlebot3_waypoints1/scripts/: turtlebot3_waypoints1.py
(+44 files in other folders)
