<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_waypoints1</name>
  <version>0.0.1</version>
  <description>Package to send waypoints to turtlebot and record topics to bagfile</description>

  <maintainer email="jan.steinbrener@aau.at">Jan Steinbrener</maintainer>
  <license>BSD</license>

  <author email="jan.steinbrener@aau.at">Jan Steinbrener</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>